Add example reconstructions

--- a/.gitignore
+++ b/.gitignore
@@ -144,9 +144,12 @@ dmypy.json
 *.csv#
 
 *.png
+
 # dont ignore the teaser
 !11794_ResNet18_ImageNet_input.png
 !11794_ResNet18_ImageNet_output.png
+!densenet_cl27_rec_img_exp0_idx1.png
+!densenet_cl27_gt_img_idx1.png
 
 *.zip
 
